src/objects/P7S1_Team__c.object
<CustomObject>
    <description>Teams, die eine Mitarbeiter optional zugeordnet werden.</description>
    <fields>
        <fullName>P7S1_CompNo__c</fullName>
        <description>Accountnummer (wird noch von alter DWH-SST benötigt)</description>
        <formula>P7S1_Comp__r.P7S1_CompNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accountnummer (wird noch von alter DWH-SST benötigt)</inlineHelpText>
        <label>Accountnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Comp__c</fullName>
        <label>P7S1 Firma</label>
        <referenceTo>P7S1_Comp__c</referenceTo>
        <relationshipLabel>Mitarbeiter-Teams</relationshipLabel>
        <relationshipName>Mitarbeiter_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_TeamNo__c</fullName>
        <description>Team-Nr (wird für alte DWH-SST noch benötigt)</description>
        <inlineHelpText>Team-Nr (wird für alte DWH-SST noch benötigt)</inlineHelpText>
        <label>Team-Nr.</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Mitarbeiter-Team</label>
    <nameField>
        <label>Mitarbeiter-Team-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mitarbeiter-Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>